name:            hlatex
cabal-version:   >= 1.8
version:         0.1
license:         BSD3
license-File:    LICENSE
copyright:       (c) Nicolas Pouillard
author:          Nicolas Pouillard
maintainer:      Nicolas Pouillard <nicolas.pouillard@gmail.com>
category:        Text
synopsis:        A library to build valid LaTeX files
description:     ...
stability:       Provisional
build-type:      Simple

flag build_doc
    Default: False

library
    build-depends:
                 base>=3.0&&<5, containers>=0.1, process, filepath, directory,
                 template-haskell >= 2.5, base-unicode-symbols,
                 transformers>=0.2.1&&<1, monads-fd>=0.1.0,
                 uniplate>=1.4&&<1.7, derive, utf8-string
    exposed-modules:
                 Language.LaTeX,
                 Language.LaTeX.Types,
                 Language.LaTeX.Length,
                 Language.LaTeX.Builder,
                 Language.LaTeX.Builder.Internal,
                 Language.LaTeX.Builder.MonoidUtils,
                 Language.LaTeX.Builder.Math,
                 Language.LaTeX.Builder.Graphics,
                 Language.LaTeX.Builder.Color,
                 Language.LaTeX.Builder.Rotating,
                 Language.LaTeX.Builder.QQ,
                 Language.LaTeX.Builder.Beamer,
                 Language.LaTeX.Builder.Babel,
                 Language.LaTeX.Printer,
                 Language.LaTeX.Slicer,
                 Language.LaTeX.Checker,
                 Language.LaTeX.Unicode
    ghc-options: -Wall

executable generate_hlatex_user_guide
    Build-depends: base>=3.0&&<5, base-unicode-symbols, monads-fd>=0.1.0,
                 containers>=0.1, process, filepath,
                 template-haskell, transformers>=0.2.0,
                 uniplate, derive, utf8-string,
                 frquotes
    -- hs-source-dirs: doc
    -- main-is: user_guide.hs
    main-is: doc/user_guide.hs
    ghc-options: -Wall
  if !flag(build_doc)
    Buildable: False

source-repository head
  type:     darcs
  location: http://patch-tag.com/r/np/hlatex/pullrepo

--source-repository this
--  type:     darcs
--  location: http://patch-tag.com/r/np/hlatex/pullrepo
--  tag:      0.1

